formatted description collision avoidance

--- a/Zwischenbericht.tex
+++ b/Zwischenbericht.tex
@@ -98,16 +98,18 @@ Sollte der Roboter genau senkrecht auf eine Ecke zufahren, kann der Fall auftret
 Die zurückgegebenen Werte werden dem Roboter mithilfe eines Publishers übermittelt.\\
 
 
-Die Funktionalität des implementierten Programms wird anhand der zur Verfügung gestellten Funktion \textit{create\_visualisation} geprüft und visualisiert. In den folgenden Abbildung sind dessen Ergebnisse gegenübergestellt.\\\\\\\begin{centering}
+Die Funktionalität des implementierten Programms wird anhand der zur Verfügung gestellten Funktion \textit{create\_visualisation} geprüft und visualisiert. In den folgenden Abbildung sind dessen Ergebnisse gegenübergestellt.\newpage
+
+\begin{centering}
 Visualisieriung Welt 1\\
-\includegraphics[width=290pt]{roboter_pfad1.jpg}\newpage
+\includegraphics[width=290pt]{roboter_pfad1.jpg}\\
 Visualisieriung Welt 2\\
-\includegraphics[width=290pt]{roboter_pfad2.jpg}\\
+\includegraphics[width=290pt]{roboter_pfad2.jpg}\newpage
 ~\\
 Visualisieriung Welt 3\\
-\includegraphics[width=290pt]{roboter_pfad3.jpg}\newpage
+\includegraphics[width=290pt]{roboter_pfad3.jpg}\\
 Visualisieriung Welt 4\\
-\includegraphics[width=290pt]{roboter_pfad4.jpg}\\
+\includegraphics[width=290pt]{roboter_pfad4.jpg}\newpage
 ~\\
 Visualisieriung Welt 5\\
 \includegraphics[width=290pt]{roboter_pfad5.jpg}\\
